--- a/Infrastructure.Common/Infrastructure.Common.csproj
+++ b/Infrastructure.Common/Infrastructure.Common.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
