--- a/MongoDbWebService.ServiceLayer/MongoDbWebService.ServiceLayer.csproj
+++ b/MongoDbWebService.ServiceLayer/MongoDbWebService.ServiceLayer.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj" />
-    <ProjectReference Include="..\Infrastructure.ServiceLayer\Infrastructure.ServiceLayer.csproj" />
+    <ProjectReference Include="..\MongoDbWebService.Models\MongoDbWebService.Models.csproj" />
   </ItemGroup>
 
 </Project>
